z-index fix for spell searcher
fixed bug where typeahead menu displayed on top of sticky header

--- a/styles/common.css
+++ b/styles/common.css
@@ -111,7 +111,7 @@ img, br {
 	position: -webkit-sticky; /* Safari */
 	position: sticky;
 	top: 0;
-	z-index: 99;
+	z-index: 101; /* typeahead (.tt-menu) is 100 */
 	background-color: rgba(255,255,255,.8);
 	padding-bottom: 10px;
 	padding-top: 5px;
